# MCPFastAPII

./: .env  .gitignore  AUTH_README.md  README.md  generate_installer.py  install_project.py  main.py  pyproject.toml  test_guardrails.py  test_import.py  test_output.txt  verify_evaluation_manual.py  verify_ssl_fix.py  verify_token_cost.py
app/: __init__.py  app.py  schemas.py
app/agents/: base.py  coder.py  general.py  researcher.py  self_learning.py
app/api/: __init__.py  agents.py  auth.py  files.py  sessions.py  users.py  websocket.py
app/core/: __init__.py  database.py  fix_mimetypes.py  jwt_utils.py  logger.py  logging_config.py  observability_config.py  password.py  prompt_manager.py
app/mcp/: server.py  tools.py
app/models/: __init__.py  message.py  session.py  user.py
app/prompts/: common.yaml  partials.yaml
app/prompts/agents/: coder.yaml  self_learning.yaml
app/services/: __init__.py  ai_service.py  auth_service.py  empathy_service.py  evaluation_service.py  grounding_service.py  guardrails_service.py  llm_service.py  memory_service.py  observability.py  observability_service.py  rag_service.py  token_service.py  user_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
logs/: logs.txt
tests/: README.md  __init__.py  conftest.py  report.html  test_ai_service.py  test_api.py  test_architecture.py  test_auth.py  test_database.py  test_evaluation.py  test_explainability.py  test_models.py  test_schemas.py  test_self_learning.py  test_sustainability.py  test_token_optimizer.py  verify_agents.py  verify_auth_port.py  verify_guardrails_integration.py  verify_llm_service.py  verify_logging.py  verify_me_endpoint.py  verify_openai_services.py  verify_rbac.py  verify_registration_role.py  verify_serper.py  verify_tool_args.py  verify_user_management.py  verify_web_search_api.py
tests/core/: test_prompt_enhancements.py
tests/logs/: test_log.txt
tests/manual/: test_guardrails.py  test_import.py  verify_evaluation_manual.py  verify_ssl_fix.py  verify_token_cost.py
tests/services/: test_caching.py  test_observability_new.py  test_uncertainty_service.py
(+15 files in other folders)
