[project]
name = "backend"
version = "0.1.0"
description = "AI Desk Chat Application Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "sqlmodel==0.0.14",
    "sqlalchemy==2.0.23",
    "google-generativeai==0.8.3",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.20",
    "tiktoken",
    "pyyaml",
    "langchain>=0.1.0",
    "langchain-openai",
    "pypdf",
    "langsmith",
    "langchain-community",
    # Observability dependencies
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "traceloop-sdk>=0.15.0",
    "arize-phoenix>=12.0.0",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short --html=tests/report.html --self-contained-html"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "pytest-html==4.1.1",
    "httpx==0.25.2",
]
